syntax = "proto3";

package calculator;
option go_package = "calculator/calculatorpb";  // calculatorpb

message Calculation {
    int64 first_number = 1;
    int64 second_number = 2;
}

message CalculationRequest {
    Calculation calculation = 1;
}

message CalculationResponse {
    int64 result = 1;
}

message PrimeNumberRequest {
    int64 number = 1;
}

message PrimeNumberResponse {
    int64 number = 1;
}

message AverageRequest {
    int32 number = 1;
}

message AverageResponse {
    float number = 1;
}

message FindMaxRequest {
    int32 number = 1;
}

message FindMaxResponse {
    int32 number = 1;
}

message SquareRootRequest {
    int32 number = 1;
}

message SquareRootResponse {
    double number_root = 1;
}

service CalculatorService {
    // Unary
    rpc Calculate (CalculationRequest) returns (CalculationResponse) {};

    // Server Streaming
    rpc PrimeNumberDecomposition (PrimeNumberRequest) returns (stream PrimeNumberResponse) {};

    // Client Streaming
    rpc ComputeAverage (stream AverageRequest) returns (AverageResponse) {};

    // BiDi Streaming
    rpc FindMaximum (stream FindMaxRequest) returns (stream FindMaxResponse) {};

    // Error handling
    // This RPC will throw an exception if the sent number is negative
    // The error being sent is of type INVALID_ARGUMENT
    rpc SquareRoot (SquareRootRequest) returns (SquareRootResponse) {};
}